# toz3

./: CMakeLists.txt  README.md  codegen.cpp  codegen.h  main.cpp  randRemove.cpp  randRemove.h  sub_toP4.cpp  sub_toP4.h  toz3Options.cpp  toz3Options.h
